altv-capi/client/altv-capi.hpp


struct alt_Vector_float_4_VectorLayout_float_4 {
    float elements[4];
};
struct alt_PointPaddedLayout {
    float x;
    float y;
    float z;
    float pad;
};
typedef struct alt_Vector_float_3_PointLayout alt_Point;
typedef struct alt_Vector_float_3_PointPaddedLayout alt_PointPadded;
typedef struct alt_Vector_float_3_PointLayout alt_Position;
typedef struct alt_Vector_float_3_PointPaddedLayout alt_PositionPadded;
struct alt_RotationLayout {
    float roll;
    float pitch;
    float yaw;
};
CAPI void alt_RotationLayout_free(struct alt_RotationLayout* ptr);
CAPI struct alt_RotationLayout* alt_RotationLayout_Create(float _roll, float _pitch, float _yaw);
CAPI struct alt_RotationLayout* alt_RotationLayout_Create_1();
CAPI struct alt_RotationLayout* alt_RotationLayout_Create_2(float* elements);
CAPI float* alt_RotationLayout_Access_size_t(struct alt_RotationLayout* _instance, unsigned long long key);
CAPI float* alt_RotationLayout_Access_size_t_1(struct alt_RotationLayout* _instance, unsigned long long key);
CAPI void alt_RotationLayout_Normalize(struct alt_RotationLayout* _instance);
CAPI struct alt_RotationLayout* alt_RotationLayout_Create_3(struct alt_RotationLayout* _p0);
CAPI struct alt_RotationLayout* alt_RotationLayout_Create_4(struct alt_RotationLayout* _p0);
typedef float alt_RotationLayout_Element;
struct alt_RotationPaddedLayout {
    float roll;
    float pitch;
    float yaw;
    float pad;
};
CAPI void alt_RotationPaddedLayout_free(struct alt_RotationPaddedLayout* ptr);
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create(float _roll, float _pitch, float _yaw);
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create_1();
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create_2(float* elements);
CAPI float* alt_RotationPaddedLayout_Access_size_t(struct alt_RotationPaddedLayout* _instance, unsigned long long key);
CAPI float* alt_RotationPaddedLayout_Access_size_t_1(struct alt_RotationPaddedLayout* _instance, unsigned long long key);
CAPI void alt_RotationPaddedLayout_Normalize(struct alt_RotationPaddedLayout* _instance);
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create_3(struct alt_RotationLayout* _p0);
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create_4(struct alt_RotationLayout* _p0);
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create_5();
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create_6(float roll, float pitch, float yaw);
CAPI struct alt_RotationPaddedLayout* alt_RotationPaddedLayout_Create_7(float* elements);
typedef struct alt_Vector_float_3_RotationLayout alt_Rotation;
typedef struct alt_Vector_float_3_RotationPaddedLayout alt_RotationPadded;
struct alt_ViewMatrixLayout {
    struct alt_Vector_float_4_VectorLayout_float_4 right;
    struct alt_Vector_float_4_VectorLayout_float_4 up;
    struct alt_Vector_float_4_VectorLayout_float_4 forward;
    struct alt_Vector_float_4_VectorLayout_float_4 pos;
};
CAPI void alt_ViewMatrixLayout_free(struct alt_ViewMatrixLayout* ptr);
CAPI struct alt_ViewMatrixLayout* alt_ViewMatrixLayout_Create();
CAPI struct alt_ViewMatrixLayout* alt_ViewMatrixLayout_Create_1(struct alt_Vector_float_4_VectorLayout_float_4* _rows);
CAPI struct alt_ViewMatrixLayout* alt_ViewMatrixLayout_Create_2(struct alt_Vector_float_4_VectorLayout_float_4* row);
CAPI struct alt_ViewMatrixLayout* alt_ViewMatrixLayout_Create_3(float* elements);
CAPI struct alt_ViewMatrixLayout* alt_ViewMatrixLayout_Create_4(struct alt_Vector_float_4_VectorLayout_float_4* _right, struct alt_Vector_float_4_VectorLayout_float_4* _up, struct alt_Vector_float_4_VectorLayout_float_4* _forward, struct alt_Vector_float_4_VectorLayout_float_4* _pos);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_ViewMatrixLayout_Access_size_t(struct alt_ViewMatrixLayout* _instance, unsigned long long key);
CAPI struct alt_Vector_float_4_VectorLayout_float_4* alt_ViewMatrixLayout_Access_size_t_1(struct alt_ViewMatrixLayout* _instance, unsigned long long key);
typedef struct alt_Vector_float_4_VectorLayout_float_4 alt_ViewMatrixLayout_Row;
typedef float alt_ViewMatrixLayout_Element;
typedef struct alt_ViewMatrixLayout alt_ViewMatrixLayout_Transposed;
typedef struct alt_Matrix_float_4_4_ViewMatrixLayout alt_ViewMatrix;
typedef unsigned long long alt_Size;
struct alt_String {
    char * data;
    unsigned long long size;
};
CAPI struct alt_String* alt_String_Create(unsigned long long _size, char fill);
CAPI struct alt_String* alt_String_Create_1(char* _data, unsigned long long size);
CAPI struct alt_String* alt_String_Create_2();
CAPI struct alt_String* alt_String_Create_3(char* _str);
CAPI struct alt_String* alt_String_Create_5(struct alt_String* that);
CAPI struct alt_String* alt_String_Create_6(struct alt_String* that);
CAPI char* alt_String_Access_uint64_t(struct alt_String* _instance, unsigned long long key);
CAPI char alt_String_Access_uint64_t_1(struct alt_String* _instance, unsigned long long key);
CAPI void alt_String_Assign_constStringRef(struct alt_String* _instance, struct alt_String* that);
CAPI void alt_String_Assign_StringRefRef(struct alt_String* _instance, struct alt_String* that);
CAPI _Bool alt_String_IsEmpty(struct alt_String* _instance);
CAPI char* alt_String_GetData(struct alt_String* _instance);
CAPI char* alt_String_GetData_1(struct alt_String* _instance);