client/src/altv_capi.rs

f32 ) -> * mut alt_PointPaddedLayout ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_float_3_PointLayout { _unused : [ u8 ; 0 ] , } pub type alt_Point = alt_Vector_float_3_PointLayout ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_float_3_PointPaddedLayout { _unused : [ u8 ; 0 ] , } pub type alt_PointPadded = alt_Vector_float_3_PointPaddedLayout ; pub type alt_Position = alt_Vector_float_3_PointLayout ; pub type alt_PositionPadded = alt_Vector_float_3_PointPaddedLayout ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_RotationLayout { pub roll : f32 , pub pitch : f32 , pub yaw : f32 , } # [ test ] fn bindgen_test_layout_alt_RotationLayout ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_RotationLayout > ( ) , 12usize , concat ! ( "Size of: " , stringify ! ( alt_RotationLayout ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_RotationLayout > ( ) , 4usize , concat ! ( "Alignment of " , stringify ! ( alt_RotationLayout ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RotationLayout > ( ) ) ) . roll as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_RotationLayout ) , "::" , stringify ! ( roll ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RotationLayout > ( ) ) ) . pitch as * const _ as usize } , 4usize , concat ! ( "Offset of field: " , stringify ! ( alt_RotationLayout ) , "::" , stringify ! ( pitch ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RotationLayout > ( ) ) ) . yaw as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_RotationLayout ) , "::" , stringify ! ( yaw ) ) ) ; } extern "C" { pub fn alt_RotationLayout_free ( ptr : * mut alt_RotationLayout ) ; } extern "C" { pub fn alt_RotationLayout_Create ( _roll : f32 , _pitch : f32 , _yaw : f32 ) -> * mut alt_RotationLayout ; } extern "C" { pub fn alt_RotationLayout_Create_1 ( ) -> * mut alt_RotationLayout ; } extern "C" { pub fn alt_RotationLayout_Create_2 ( elements : * mut f32 ) -> * mut alt_RotationLayout ; } extern "C" { pub fn alt_RotationLayout_Access_size_t ( _instance : * mut alt_RotationLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_RotationLayout_Access_size_t_1 ( _instance : * mut alt_RotationLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_RotationLayout_Normalize ( _instance : * mut alt_RotationLayout ) ; } extern "C" { pub fn alt_RotationLayout_Create_3 ( _p0 : * mut alt_RotationLayout ) -> * mut alt_RotationLayout ; } extern "C" { pub fn alt_RotationLayout_Create_4 ( _p0 : * mut alt_RotationLayout ) -> * mut alt_RotationLayout ; } pub type alt_RotationLayout_Element = f32 ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_RotationPaddedLayout { pub roll : f32 , pub pitch : f32 , pub yaw : f32 , pub pad : f32 , } # [ test ] fn bindgen_test_layout_alt_RotationPaddedLayout ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_RotationPaddedLayout > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_RotationPaddedLayout ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_RotationPaddedLayout > ( ) , 4usize , concat ! ( "Alignment of " , stringify ! ( alt_RotationPaddedLayout ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RotationPaddedLayout > ( ) ) ) . roll as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_RotationPaddedLayout ) , "::" , stringify ! ( roll ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RotationPaddedLayout > ( ) ) ) . pitch as * const _ as usize } , 4usize , concat ! ( "Offset of field: " , stringify ! ( alt_RotationPaddedLayout ) , "::" , stringify ! ( pitch ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RotationPaddedLayout > ( ) ) ) . yaw as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_RotationPaddedLayout ) , "::" , stringify ! ( yaw ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RotationPaddedLayout > ( ) ) ) . pad as * const _ as usize } , 12usize , concat ! ( "Offset of field: " , stringify ! ( alt_RotationPaddedLayout ) , "::" , stringify ! ( pad ) ) ) ; } extern "C" { pub fn alt_RotationPaddedLayout_free ( ptr : * mut alt_RotationPaddedLayout ) ; } extern "C" { pub fn alt_RotationPaddedLayout_Create ( _roll : f32 , _pitch : f32 , _yaw : f32 ) -> * mut alt_RotationPaddedLayout ; } extern "C" { pub fn alt_RotationPaddedLayout_Create_1 ( ) -> * mut alt_RotationPaddedLayout ; } extern "C" { pub fn alt_RotationPaddedLayout_Create_2 ( elements : * mut f32 ) -> * mut alt_RotationPaddedLayout ; } extern "C" { pub fn alt_RotationPaddedLayout_Access_size_t ( _instance : * mut alt_RotationPaddedLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_RotationPaddedLayout_Access_size_t_1 ( _instance : * mut alt_RotationPaddedLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut f32 ; } extern "C" { pub fn alt_RotationPaddedLayout_Normalize ( _instance : * mut alt_RotationPaddedLayout ) ; } extern "C" { pub fn alt_RotationPaddedLayout_Create_3 ( _p0 : * mut alt_RotationLayout ) -> * mut alt_RotationPaddedLayout ; } extern "C" { pub fn alt_RotationPaddedLayout_Create_4 ( _p0 : * mut alt_RotationLayout ) -> * mut alt_RotationPaddedLayout ; } extern "C" { pub fn alt_RotationPaddedLayout_Create_5 ( ) -> * mut alt_RotationPaddedLayout ; } extern "C" { pub fn alt_RotationPaddedLayout_Create_6 ( roll : f32 , pitch : f32 , yaw : f32 ) -> * mut alt_RotationPaddedLayout ; } extern "C" { pub fn alt_RotationPaddedLayout_Create_7 ( elements : * mut f32 ) -> * mut alt_RotationPaddedLayout ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_float_3_RotationLayout { _unused : [ u8 ; 0 ] , } pub type alt_Rotation = alt_Vector_float_3_RotationLayout ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Vector_float_3_RotationPaddedLayout { _unused : [ u8 ; 0 ] , } pub type alt_RotationPadded = alt_Vector_float_3_RotationPaddedLayout ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_ViewMatrixLayout { pub right : alt_Vector_float_4_VectorLayout_float_4 , pub up : alt_Vector_float_4_VectorLayout_float_4 , pub forward : alt_Vector_float_4_VectorLayout_float_4 , pub pos : alt_Vector_float_4_VectorLayout_float_4 , } # [ test ] fn bindgen_test_layout_alt_ViewMatrixLayout ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_ViewMatrixLayout > ( ) , 64usize , concat ! ( "Size of: " , stringify ! ( alt_ViewMatrixLayout ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_ViewMatrixLayout > ( ) , 4usize , concat ! ( "Alignment of " , stringify ! ( alt_ViewMatrixLayout ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_ViewMatrixLayout > ( ) ) ) . right as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_ViewMatrixLayout ) , "::" , stringify ! ( right ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_ViewMatrixLayout > ( ) ) ) . up as * const _ as usize } , 16usize , concat ! ( "Offset of field: " , stringify ! ( alt_ViewMatrixLayout ) , "::" , stringify ! ( up ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_ViewMatrixLayout > ( ) ) ) . forward as * const _ as usize } , 32usize , concat ! ( "Offset of field: " , stringify ! ( alt_ViewMatrixLayout ) , "::" , stringify ! ( forward ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_ViewMatrixLayout > ( ) ) ) . pos as * const _ as usize } , 48usize , concat ! ( "Offset of field: " , stringify ! ( alt_ViewMatrixLayout ) , "::" , stringify ! ( pos ) ) ) ; } extern "C" { pub fn alt_ViewMatrixLayout_free ( ptr : * mut alt_ViewMatrixLayout ) ; } extern "C" { pub fn alt_ViewMatrixLayout_Create ( ) -> * mut alt_ViewMatrixLayout ; } extern "C" { pub fn alt_ViewMatrixLayout_Create_1 ( _rows : * mut alt_Vector_float_4_VectorLayout_float_4 ) -> * mut alt_ViewMatrixLayout ; } extern "C" { pub fn alt_ViewMatrixLayout_Create_2 ( row : * mut alt_Vector_float_4_VectorLayout_float_4 ) -> * mut alt_ViewMatrixLayout ; } extern "C" { pub fn alt_ViewMatrixLayout_Create_3 ( elements : * mut f32 ) -> * mut alt_ViewMatrixLayout ; } extern "C" { pub fn alt_ViewMatrixLayout_Create_4 ( _right : * mut alt_Vector_float_4_VectorLayout_float_4 , _up : * mut alt_Vector_float_4_VectorLayout_float_4 , _forward : * mut alt_Vector_float_4_VectorLayout_float_4 , _pos : * mut alt_Vector_float_4_VectorLayout_float_4 ) -> * mut alt_ViewMatrixLayout ; } extern "C" { pub fn alt_ViewMatrixLayout_Access_size_t ( _instance : * mut alt_ViewMatrixLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } extern "C" { pub fn alt_ViewMatrixLayout_Access_size_t_1 ( _instance : * mut alt_ViewMatrixLayout , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_Vector_float_4_VectorLayout_float_4 ; } pub type alt_ViewMatrixLayout_Row = alt_Vector_float_4_VectorLayout_float_4 ; pub type alt_ViewMatrixLayout_Element = f32 ; pub type alt_ViewMatrixLayout_Transposed = alt_ViewMatrixLayout ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Matrix_float_4_4_ViewMatrixLayout { _unused : [ u8 ; 0 ] , } pub type alt_ViewMatrix = alt_Matrix_float_4_4_ViewMatrixLayout ; pub type alt_Size = :: std :: os :: raw :: c_ulonglong ; # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_String { pub data : * mut :: std :: os :: raw :: c_char , pub size : :: std :: os :: raw :: c_ulonglong , } # [ test ] fn bindgen_test_layout_alt_String ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_String > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_String ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_String > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_String ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_String > ( ) ) ) . data as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_String ) , "::" , stringify ! ( data ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_String > ( ) ) ) . size as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_String ) , "::" , stringify ! ( size ) ) ) ; } extern "C" { pub fn alt_String_Create ( _size : :: std :: os :: raw :: c_ulonglong , fill : :: std :: os :: raw :: c_char ) -> * mut alt_String ; } extern "C" { pub fn alt_String_Create_1 ( _data : * mut :: std :: os :: raw :: c_char , size : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_String ; } extern "C" { pub fn alt_String_Create_2 ( ) -> * mut alt_String ; } extern "C" { pub fn alt_String_Create_3 ( _str : * mut :: std :: os :: raw :: c_char ) -> * mut alt_String ; } extern "C" { pub fn alt_String_Create_5 ( that : * mut alt_String ) -> * mut alt_String ; } extern "C" { pub fn alt_String_Create_6 ( that : * mut alt_String ) -> * mut alt_String ; } extern "C" { pub fn alt_String_Access_uint64_t ( _instance : * mut alt_String , key : :: std :: os :: raw :: c_ulonglong ) -> * mut :: std :: os :: raw :: c_char ; } extern "C" { pub fn alt_String_Access_uint64_t_1 ( _instance : * mut alt_String , key : :: std :: os :: raw :: c_ulonglong ) -> :: std :: os :: raw :: c_char ; } extern "C" { pub fn alt_String_Assign_constStringRef ( _instance : * mut alt_String , that : * mut alt_String ) ; } extern "C" { pub fn alt_String_Assign_StringRefRef ( _instance : * mut alt_String , that : * mut alt_String ) ; } extern "C" { pub fn alt_String_IsEmpty ( _instance : * mut alt_String ) -> bool ; } extern "C" { pub fn alt_String_GetData ( _instance : * mut alt_String ) -> * mut :: std :: os :: raw :: c_char ; } extern "C" { pub fn alt_String_GetData_1 ( _instance : * mut alt_String ) -> * mut :: std :: os